Fixed scrollbar styles

--- a/assests/style/style.scss
+++ b/assests/style/style.scss
@@ -98,9 +98,14 @@ $desktop: 1024px;
 
 @mixin scroll-y {
     &::-webkit-scrollbar {
-        width: 3px;
-        background-color: transparent;
+        width: 4px;
     }
+       
+    &::-webkit-scrollbar-track {
+        background-color: transparent;
+        border:  0;
+    }
+       
     &::-webkit-scrollbar-thumb {
         background-color: darkgrey;
     }
@@ -139,6 +144,9 @@ $desktop: 1024px;
     }
 }
 
+* {
+    @include scroll-y;
+}
 
 body, html {
     height: 100%;
@@ -147,6 +155,8 @@ body, html {
 body {
     font-family: 'Open Sans', sans-serif;
     color: color(cgray);
+
+    @include scroll-y;
 
     @include desktop {
         background-color: rgba(0, 0, 0, 0.1);
@@ -165,6 +175,7 @@ main {
 .main {
     left: 50%;
     margin-left: -45%;
+    
 
     @include phonemd {
         margin-left: calc(-470px / 2);
@@ -674,7 +685,7 @@ a {
 
 .profile-wrap {
     width: 100%;
-    
+
     .show-small {
         @include desktop {
             display: none;
